// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryModal should render empty state 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw fWjEmW fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-50 mt-5 mr-5"
    >
      <button
        class="sc-AxirZ iJKGpA"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxjAm iepfoc"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2
        class="mb-0 text-3xl font-bold"
      >
        History
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="flex flex-col mt-5"
        >
          <div
            class="sc-AxheI bjlCjh"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  font-semibold"
                    >
                      <div
                        class="mr-2"
                      >
                        Type
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  font-semibold justify-center"
                    >
                      <div
                        class="mr-2"
                      >
                        Date
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  font-semibold float-right"
                    >
                      <div
                        class="mr-2"
                      >
                        Transaction
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              />
            </table>
          </div>
          <div
            class="self-center mt-2"
          >
            <div
              class="sc-AxhCb etDdhz"
              data-testid="Pagination"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="CompactPagination__first"
                disabled=""
                type="button"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    pagination-first.svg
                  </svg>
                </div>
              </button>
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="CompactPagination__previous"
                disabled=""
                type="button"
              >
                <div
                  class="sc-AxjAm iepfoc"
                  height="10"
                  width="10"
                >
                  <svg>
                    back.svg
                  </svg>
                </div>
              </button>
              <div
                class="flex items-center px-4 py-2 rounded bg-theme-primary-contrast text-theme-primary"
              >
                Page 1 of 3
              </div>
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="CompactPagination__next"
                type="button"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    forward.svg
                  </svg>
                </div>
              </button>
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="CompactPagination__last"
                type="button"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    pagination-last.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`HistoryModal should render properly 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw fWjEmW fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-50 mt-5 mr-5"
    >
      <button
        class="sc-AxirZ iJKGpA"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxjAm iepfoc"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2
        class="mb-0 text-3xl font-bold"
      >
        History
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="flex flex-col mt-5"
        >
          <div
            class="sc-AxheI bjlCjh"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  font-semibold"
                    >
                      <div
                        class="mr-2"
                      >
                        Type
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  font-semibold justify-center"
                    >
                      <div
                        class="mr-2"
                      >
                        Date
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  font-semibold float-right"
                    >
                      <div
                        class="mr-2"
                      >
                        Transaction
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-300"
                  data-testid="blockchain-table__row"
                >
                  <td
                    class="py-6 font-semibold text-left"
                  >
                    <span>
                      Registration
                    </span>
                  </td>
                  <td
                    class="py-6 font-semibold text-center"
                  >
                    <span>
                      27 May 2020
                    </span>
                  </td>
                  <td
                    class="flex items-center float-right py-6 font-semibold text-theme-primary-500"
                  >
                    <div
                      class="sc-AxjAm jmgDQY"
                      height="22"
                      width="22"
                    >
                      <svg>
                        redirect.svg
                      </svg>
                    </div>
                    <span
                      class="ml-1"
                    >
                      View
                    </span>
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-300"
                  data-testid="blockchain-table__row"
                >
                  <td
                    class="py-6 font-semibold text-left"
                  >
                    <span>
                      Update
                    </span>
                  </td>
                  <td
                    class="py-6 font-semibold text-center"
                  >
                    <span>
                      18 May 2020
                    </span>
                  </td>
                  <td
                    class="flex items-center float-right py-6 font-semibold text-theme-primary-500"
                  >
                    <div
                      class="sc-AxjAm jmgDQY"
                      height="22"
                      width="22"
                    >
                      <svg>
                        redirect.svg
                      </svg>
                    </div>
                    <span
                      class="ml-1"
                    >
                      View
                    </span>
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-300"
                  data-testid="blockchain-table__row"
                >
                  <td
                    class="py-6 font-semibold text-left"
                  >
                    <span>
                      Update
                    </span>
                  </td>
                  <td
                    class="py-6 font-semibold text-center"
                  >
                    <span>
                      3 May 2020
                    </span>
                  </td>
                  <td
                    class="flex items-center float-right py-6 font-semibold text-theme-primary-500"
                  >
                    <div
                      class="sc-AxjAm jmgDQY"
                      height="22"
                      width="22"
                    >
                      <svg>
                        redirect.svg
                      </svg>
                    </div>
                    <span
                      class="ml-1"
                    >
                      View
                    </span>
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-300"
                  data-testid="blockchain-table__row"
                >
                  <td
                    class="py-6 font-semibold text-left"
                  >
                    <span>
                      Resign
                    </span>
                  </td>
                  <td
                    class="py-6 font-semibold text-center"
                  >
                    <span>
                      15 Jun 2020
                    </span>
                  </td>
                  <td
                    class="flex items-center float-right py-6 font-semibold text-theme-primary-500"
                  >
                    <div
                      class="sc-AxjAm jmgDQY"
                      height="22"
                      width="22"
                    >
                      <svg>
                        redirect.svg
                      </svg>
                    </div>
                    <span
                      class="ml-1"
                    >
                      View
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            class="self-center mt-2"
          >
            <div
              class="sc-AxhCb etDdhz"
              data-testid="Pagination"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="CompactPagination__first"
                disabled=""
                type="button"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    pagination-first.svg
                  </svg>
                </div>
              </button>
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="CompactPagination__previous"
                disabled=""
                type="button"
              >
                <div
                  class="sc-AxjAm iepfoc"
                  height="10"
                  width="10"
                >
                  <svg>
                    back.svg
                  </svg>
                </div>
              </button>
              <div
                class="flex items-center px-4 py-2 rounded bg-theme-primary-contrast text-theme-primary"
              >
                Page 1 of 3
              </div>
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="CompactPagination__next"
                type="button"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    forward.svg
                  </svg>
                </div>
              </button>
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="CompactPagination__last"
                type="button"
              >
                <div
                  class="sc-AxjAm HWmvM"
                  height="12"
                  width="12"
                >
                  <svg>
                    pagination-last.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</DocumentFragment>
`;
